<?xml version="1.0"?>
<package format="2">
  <name>gps_pkg</name>
  <version>0.0.0</version>
  <description>gps_pkg</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>

  <license>TODO</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>generate_messages</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>life_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>generate_messages</build_export_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>life_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>generate_messages</exec_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>life_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
